# haseongpu

./: .clang-format  .coderabbit.yaml  .drone.yml  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yml  .rodare.json  .travis.yml  .zenodo.json  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  HASEonGPU.py  LICENSE.md  Makefile  README  README.md  REFERENCE.md  calcPhiASE.m  compSerial_Itest_values.csv  job_array.sh  mse_values.txt  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
Benchmark/: benchmark.cpp  benchmark.hpp  benchmark_gui.py
HASEonGPU_Bindings/: __init__.py  _config.py.in  module.cpp
cmake/: AlpakaBackendNames.cmake  HASEonGPUConfig.cmake.in  HaseAdios2Provider.cmake.in  HaseHdf5Provider.cmake.in  HaseOpenPmdProvider.cmake.in  HaseTargetToolchain.cmake  OpenPmdBackend.cmake  OpenPmdBackendProbe.cmake  findAlpaka.cmake  findOpenPmd.cmake  haseVersion.hpp.in  pythonBindings.cmake  pythonRuntime.cmake  pythonRuntimeConfig.py.in  searchBackends.cmake
config/: hase-phiase.yaml
doc/: ideen.txt
docs/: requirements.txt
docs/source/: MATLABInterface.rst  backendSelection.rst  binaryInterface.rst  compilation.rst  conf.py  gettingStarted.rst  grayBat.rst  index.rst  mpi.rst  openpmdTransport.rst  pythonAPI.rst  pythonInterface.rst  pythonInterfaceLegacy.rst  scripts.rst  theoryAndModel.rst  windows.rst
example/: _source_tree_import.py  beta_int3.m  calcPhiASE.m  extract_gain_map.m  gmshMinimalExample.py  laserPumpCladding.py  laserPumpCladdingExample.m  laserPumpCladdingOldPump.py  laserPumpExample.m  minimalExampleNewInterface.py  variable.mat
example/c_example/: calcPhiASE.cfg
example/config/: phiASE.yaml
example/data/: cuboid.vtk  cylindrical.vtk  pt.vtk
example/input/: sigma_e.txt
example/matlab_example/: beta_int.m  beta_int3.m  extract_gain_map.m  gain.m  laserPumpCladdingExample.m  set_variables.m  sigma_a.txt  vtk_wedge.m
example/minimal_alpakaExample/: CMakeLists.txt  main.cpp
example/python_example/: CMakeCache.txt  beta_int.py  beta_int3.py  calcPhiASE.py  extract_gain_map.py  gain.py  gmshMinimalExample.py  laserPumpCladding.py  requirements.txt  (+8 more)
include/: CmdOptionsMap.hpp  ConstHybridVector.hpp  RandomGenerator.hpp  SerialVersion.hpp  ase_bruteforce_cpu.h  ase_bruteforce_kernel.h  buildgrid.h  calcPhiAse.hpp  calcPhiAseMpi.hpp  calcPhiAseThreaded.hpp  calcSampleGainSum.hpp  calc_dndt_ase.h  calc_phi_ase.h  calc_phi_ase.hpp  calc_phi_ase_graybat.hpp  calc_phi_ase_mpi.h  calc_phi_ase_mpi.hpp  calc_phi_ase_threaded.h  calc_phi_ase_threaded.hpp  calc_sample_gain_sum.hpp  calc_sample_phi_ase.h  cuda_utils.h  cuda_utils.hpp  cudachecks.h  cudachecks.hpp  datatypes.h  dynintset.h  filtergrid.h  filtergrid_cpu.h  for_loops_clad.h  for_loops_clad.hpp  generate_testdata.h  geometrie.h  geometry.h  geometry.hpp  geometry_gpu.h  getMxData.h  grid.h  importanceSampling.hpp  importance_sampling.h  (+54 more)
input/: mse_threshold.txt  n_y.txt  neighbors.txt  sigma_a.txt  sigma_e.txt  x_center.txt
literature/: ASE-Raytracing GPUs.pptx  Beschreibung des bestehenden Codes.docx  gpu_vortrag_inhalt_konzept.odt  strahltabelle.ods
paper/: Makefile  abstract.tex  acceleration.tex  application.tex  ase_flux.tex  bibliography.tex  hyphenation.tex  introduction.tex  methods.tex  model.tex  octrace_ASE.tex  outline.tex  ray_tracing.tex  ray_tracing_design.tex  ray_tracing_implementation.tex  reduce_rays.tex  results.tex  tool.tex  updatePDF.sh
pyInclude/: __init__.py  calcPhiASE.py  config.py  gainMap.py  laser.py  mpiLauncher.py  pumping.py  rng.py  simulation.py  structures.py  timeIntegration.py  vtkWedge.py
scripts/: plot_ssg.py
src/: CmdOptionsMap.cpp  SerialVersion.cpp  ase_bruteforce.cu  ase_bruteforce_kernel.cu  buildgrid.cu  calcAabbs.cu  calcPhiASE.m  calc_dndt_ase.cu  calc_phi_ase.cc  calc_phi_ase.cpp  calc_phi_ase.cu  calc_phi_ase_graybat.cc  calc_phi_ase_graybat.cpp  calc_phi_ase_mpi.cc  calc_phi_ase_threaded.cc  calc_phi_ase_threaded.cu  calc_sample_gain_sum.cu  calc_sample_phi_ase.cu  copy2GPU.cu  cuda_utils.cc  cuda_utils.cu  dynintset.cu  filtergrid.cu  filtergrid_cpu.cu  for_loops_clad.cc  for_loops_clad.cu  generate_testdata.cu  geometry.cc  geometry.cpp  geometry.cu  geometry_gpu.cu  grid.cu  importance_sampling.cu  importance_sampling_kernel.cu  interpolation.cc  interpolation.cpp  interpolation.cu  logging.cc  logging.cpp  logging.cu  (+49 more)
talk/: Makefile  outline.tex  talk.tex  updatePDF.sh
tests/: CMakeLists.txt  compSerial_Itest.cpp  conftest.py  interpolation.cpp  openpmdParserValidation.cpp  openpmd_backend_matrix.py  propagateImportance.cpp  test_calcPhiASE_interface.py  test_dynintset.cpp  test_filtergrid.cu.tmp  test_filtergrid2.cu.tmp  test_filtergrid_gpu.cu  version.cpp
tests/data/: julia1D.csv
tests/data/cfg/: compSerial.cfg  legacy_config.yaml  phiAseTestConfig.yaml
tests/python/gainMedium/: test_gainMap.py  test_gainMedium.py
tests/python/geometry/: test_geometry.py  test_gmsh.py  test_vtkInput.py
tests/python/imports/: hase_bindings_smoketest.py  hase_runtime_smoketest.py  test_importResolution.py
tests/python/install/: test_installConfigureContract.py
tests/python/io/: test_vtkWedge.py
tests/python/laserProperties/: test_laserProperties.py
tests/python/openpmd/: test_backend_matrix.py  test_backends.py  test_configure.py  test_layout.py  test_openpmd_preflight.py  test_runtime.py  test_transport.py
tests/python/phiAse/: test_analyticalSphere.py  test_calcPhiAseInterface.py  test_simulationWrapper.py
tests/python/simulation/: test_laserPumpCladdingExample.py  test_laserPumpCladdingSsgRegression.py  test_legacyComparison.py  test_timeSteppedSimulation.py
utils/: alloc_test.cu  bench.sh  check_openpmd_compatibility.py  configure_hase.py  create_benchmark.sh  job_array_post.sh  job_array_run.sh  listOpenPmdBackends.py  matlab_mockup.m  octrace.vtk  openpmd_paraview.sh  parse_input.sh  parse_mat.m  pt_mat_to_vtk.py  sample_submit.sh  start_experiment.sh  submit_benchmarking.sh  submit_k20.sh  submit_matlab.sh  submit_matlab_mpi.sh  submit_mpi.sh  testLaunchLaserPump.py
(+504 files in other folders)
